// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormCheckboxGroup renders checkboxes with some pre-checked 1`] = `

<div class="govuk-checkboxes">
  <div class="govuk-checkboxes__item">
    <input class="govuk-checkboxes__input"
           id="checkbox-1"
           name="nodejs"
           type="checkbox"
           value="1"
    >
    <label class="govuk-label govuk-checkboxes__label"
           for="checkbox-1"
    >
      Test checkbox 1
    </label>
  </div>
  <div class="govuk-checkboxes__item">
    <input class="govuk-checkboxes__input"
           id="checkbox-2"
           name="nodejs"
           type="checkbox"
           value="2"
           checked
    >
    <label class="govuk-label govuk-checkboxes__label"
           for="checkbox-2"
    >
      Test checkbox 2
    </label>
  </div>
  <div class="govuk-checkboxes__item">
    <input class="govuk-checkboxes__input"
           id="checkbox-3"
           name="nodejs"
           type="checkbox"
           value="3"
    >
    <label class="govuk-label govuk-checkboxes__label"
           for="checkbox-3"
    >
      Test checkbox 3
    </label>
  </div>
</div>

`;

exports[`FormCheckboxGroup renders list of checkboxes in correct order 1`] = `

<div class="govuk-checkboxes">
  <div class="govuk-checkboxes__item">
    <input class="govuk-checkboxes__input"
           id="checkbox-1"
           name="nodejs"
           type="checkbox"
           value="1"
    >
    <label class="govuk-label govuk-checkboxes__label"
           for="checkbox-1"
    >
      Test checkbox 1
    </label>
  </div>
  <div class="govuk-checkboxes__item">
    <input class="govuk-checkboxes__input"
           id="checkbox-2"
           name="nodejs"
           type="checkbox"
           value="2"
    >
    <label class="govuk-label govuk-checkboxes__label"
           for="checkbox-2"
    >
      Test checkbox 2
    </label>
  </div>
  <div class="govuk-checkboxes__item">
    <input class="govuk-checkboxes__input"
           id="checkbox-3"
           name="nodejs"
           type="checkbox"
           value="3"
    >
    <label class="govuk-label govuk-checkboxes__label"
           for="checkbox-3"
    >
      Test checkbox 3
    </label>
  </div>
</div>

`;
